feat: modify the email template service and update the player-server routing address