@@ -47,806 +47,812 @@ public class EmailTemplates {
 
     public static final String EMAIL_VERIFY_TITLE = "邮箱验证";
 
-    public static final String EMAIL_VERIFY_TEMPLATE = "<!DOCTYPE html>\n" +
-            "<html>\n" +
-            "<head>\n" +
-            "    <meta charset=\"UTF-8\">\n" +
-            "    <title>邮箱验证</title>\n" +
-            "    <style>\n" +
-            "        body {\n" +
-            "            margin: 0;\n" +
-            "            padding: 0;\n" +
-            "            font-family: 'Helvetica Neue', Arial, sans-serif;\n" +
-            "            background-color: #f5f5f5;\n" +
-            "        }\n" +
-            "        .container {\n" +
-            "            max-width: 600px;\n" +
-            "            margin: 20px auto;\n" +
-            "            background: #ffffff;\n" +
-            "            border-radius: 16px;\n" +
-            "            overflow: hidden;\n" +
-            "            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);\n" +
-            "        }\n" +
-            "        .header {\n" +
-            "            background: linear-gradient(135deg, #1e2f45, #2c3e50);\n" +
-            "            color: white;\n" +
-            "            padding: 30px;\n" +
-            "            text-align: center;\n" +
-            "        }\n" +
-            "        .header h1 {\n" +
-            "            margin: 0;\n" +
-            "            font-size: 24px;\n" +
-            "            font-weight: 600;\n" +
-            "        }\n" +
-            "        .content {\n" +
-            "            padding: 30px;\n" +
-            "            color: #2c3e50;\n" +
-            "        }\n" +
-            "        .verify-button {\n" +
-            "            display: block;\n" +
-            "            width: 200px;\n" +
-            "            margin: 30px auto;\n" +
-            "            padding: 15px 25px;\n" +
-            "            background: #409EFF;\n" +
-            "            color: white;\n" +
-            "            text-decoration: none;\n" +
-            "            text-align: center;\n" +
-            "            border-radius: 8px;\n" +
-            "            font-weight: 500;\n" +
-            "            font-size: 16px;\n" +
-            "            transition: all 0.3s ease;\n" +
-            "        }\n" +
-            "        .verify-button:hover {\n" +
-            "            background: #66b1ff;\n" +
-            "            transform: translateY(-2px);\n" +
-            "        }\n" +
-            "        .verify-code {\n" +
-            "            text-align: center;\n" +
-            "            font-size: 24px;\n" +
-            "            font-weight: bold;\n" +
-            "            color: #409EFF;\n" +
-            "            margin: 20px 0;\n" +
-            "            letter-spacing: 5px;\n" +
-            "        }\n" +
-            "        .footer {\n" +
-            "            background: #f8f9fa;\n" +
-            "            padding: 20px;\n" +
-            "            text-align: center;\n" +
-            "            color: #909399;\n" +
-            "            font-size: 14px;\n" +
-            "        }\n" +
-            "        .warning {\n" +
-            "            color: #E6A23C;\n" +
-            "            font-size: 14px;\n" +
-            "            margin-top: 20px;\n" +
-            "        }\n" +
-            "    </style>\n" +
-            "</head>\n" +
-            "<body>\n" +
-            "    <div class=\"container\">\n" +
-            "        <div class=\"header\">\n" +
-            "            <h1>邮箱验证</h1>\n" +
-            "        </div>\n" +
-            "        \n" +
-            "        <div class=\"content\">\n" +
-            "            <p>亲爱的用户：</p>\n" +
-            "            <p>您好！感谢您游玩我们的服务器。请点击下面的按钮验证您的邮箱：</p>\n" +
-            "            \n" +
-            "            <a href=\"{verifyLink}\" class=\"verify-button\">验证邮箱</a>\n" +
-            "            \n" +
-            "            <p>如果按钮无法点击，请复制以下链接到浏览器地址栏访问：</p>\n" +
-            "            <p style=\"word-break: break-all; color: #409EFF;\">{verifyLink}</p>\n" +
-            "            \n" +
-            "            <p class=\"warning\">注意：该验证链接将在30分钟后失效，请尽快完成验证。</p>\n" +
-            "        </div>\n" +
-            "        \n" +
-            "        <div class=\"footer\">\n" +
-            "            <p>此邮件由系统自动发送，请勿回复</p>\n" +
-            "            <p>© 2025 Minecraft. All rights reserved.</p>\n" +
-            "        </div>\n" +
-            "    </div>\n" +
-            "</body>\n" +
-            "</html>";
+    public static final String EMAIL_VERIFY_TEMPLATE = """
+            <!DOCTYPE html>
+            <html>
+            <head>
+                <meta charset="UTF-8">
+                <title>邮箱验证</title>
+                <style>
+                    body {
+                        margin: 0;
+                        padding: 0;
+                        font-family: 'Helvetica Neue', Arial, sans-serif;
+                        background-color: #f5f5f5;
+                    }
+                    .container {
+                        max-width: 600px;
+                        margin: 20px auto;
+                        background: #ffffff;
+                        border-radius: 16px;
+                        overflow: hidden;
+                        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+                    }
+                    .header {
+                        background: linear-gradient(135deg, #1e2f45, #2c3e50);
+                        color: white;
+                        padding: 30px;
+                        text-align: center;
+                    }
+                    .header h1 {
+                        margin: 0;
+                        font-size: 24px;
+                        font-weight: 600;
+                    }
+                    .content {
+                        padding: 30px;
+                        color: #2c3e50;
+                    }
+                    .verify-button {
+                        display: block;
+                        width: 200px;
+                        margin: 30px auto;
+                        padding: 15px 25px;
+                        background: #409EFF;
+                        color: white;
+                        text-decoration: none;
+                        text-align: center;
+                        border-radius: 8px;
+                        font-weight: 500;
+                        font-size: 16px;
+                        transition: all 0.3s ease;
+                    }
+                    .verify-button:hover {
+                        background: #66b1ff;
+                        transform: translateY(-2px);
+                    }
+                    .verify-code {
+                        text-align: center;
+                        font-size: 24px;
+                        font-weight: bold;
+                        color: #409EFF;
+                        margin: 20px 0;
+                        letter-spacing: 5px;
+                    }
+                    .footer {
+                        background: #f8f9fa;
+                        padding: 20px;
+                        text-align: center;
+                        color: #909399;
+                        font-size: 14px;
+                    }
+                    .warning {
+                        color: #E6A23C;
+                        font-size: 14px;
+                        margin-top: 20px;
+                    }
+                </style>
+            </head>
+            <body>
+                <div class="container">
+                    <div class="header">
+                        <h1>邮箱验证</h1>
+                    </div>
+                   \s
+                    <div class="content">
+                        <p>亲爱的用户：</p>
+                        <p>您好！感谢您游玩我们的服务器。请点击下面的按钮验证您的邮箱：</p>
+                       \s
+                        <a href="{verifyLink}" class="verify-button">验证邮箱</a>
+                       \s
+                        <p>如果按钮无法点击，请复制以下链接到浏览器地址栏访问：</p>
+                        <p style="word-break: break-all; color: #409EFF;">{verifyLink}</p>
+                       \s
+                        <p class="warning">注意：该验证链接将在30分钟后失效，请尽快完成验证。</p>
+                    </div>
+                   \s
+                    <div class="footer">
+                        <p>此邮件由系统自动发送，请勿回复</p>
+                        <p>© 2025 Minecraft. All rights reserved.</p>
+                    </div>
+                </div>
+            </body>
+            </html>""";
 
-    public static final String WHITELIST_NOTIFICATION_TEMPLATE = "<!DOCTYPE html>\n" +
-            "<html>\n" +
-            "<head>\n" +
-            "    <meta charset=\"UTF-8\">\n" +
-            "    <title>白名单审核通知</title>\n" +
-            "    <style>\n" +
-            "        body {\n" +
-            "            margin: 0;\n" +
-            "            padding: 0;\n" +
-            "            font-family: 'Helvetica Neue', Arial, sans-serif;\n" +
-            "            background-color: #f5f5f5;\n" +
-            "        }\n" +
-            "        .container {\n" +
-            "            max-width: 600px;\n" +
-            "            margin: 20px auto;\n" +
-            "            background: #ffffff;\n" +
-            "            border-radius: 16px;\n" +
-            "            overflow: hidden;\n" +
-            "            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);\n" +
-            "        }\n" +
-            "        .header {\n" +
-            "            background: linear-gradient(135deg, #1e2f45, #2c3e50);\n" +
-            "            color: white;\n" +
-            "            padding: 30px;\n" +
-            "            text-align: center;\n" +
-            "        }\n" +
-            "        .header h1 {\n" +
-            "            margin: 0;\n" +
-            "            font-size: 24px;\n" +
-            "            font-weight: 600;\n" +
-            "        }\n" +
-            "        .content {\n" +
-            "            padding: 30px;\n" +
-            "            color: #2c3e50;\n" +
-            "        }\n" +
-            "        .status {\n" +
-            "            text-align: center;\n" +
-            "            margin: 20px 0;\n" +
-            "            padding: 15px;\n" +
-            "            border-radius: 8px;\n" +
-            "            font-weight: 600;\n" +
-            "            font-size: 18px;\n" +
-            "        }\n" +
-            "        .status.approved {\n" +
-            "            background-color: #f0f9eb;\n" +
-            "            color: #67C23A;\n" +
-            "            border: 1px solid #e1f3d8;\n" +
-            "        }\n" +
-            "        .status.rejected {\n" +
-            "            background-color: #fef0f0;\n" +
-            "            color: #f56c6c;\n" +
-            "            border: 1px solid #fde2e2;\n" +
-            "        }\n" +
-            "        .info-box {\n" +
-            "            background: #f8f9fa;\n" +
-            "            border-radius: 8px;\n" +
-            "            padding: 20px;\n" +
-            "            margin: 20px 0;\n" +
-            "        }\n" +
-            "        .info-item {\n" +
-            "            margin: 10px 0;\n" +
-            "            display: flex;\n" +
-            "            justify-content: space-between;\n" +
-            "        }\n" +
-            "        .info-label {\n" +
-            "            color: #606266;\n" +
-            "            font-weight: 500;\n" +
-            "        }\n" +
-            "        .info-value {\n" +
-            "            color: #409EFF;\n" +
-            "            font-weight: 500;\n" +
-            "        }\n" +
-            "        .footer {\n" +
-            "            background: #f8f9fa;\n" +
-            "            padding: 20px;\n" +
-            "            text-align: center;\n" +
-            "            color: #909399;\n" +
-            "            font-size: 14px;\n" +
-            "        }\n" +
-            "        .button {\n" +
-            "            display: inline-block;\n" +
-            "            padding: 12px 24px;\n" +
-            "            background: #409EFF;\n" +
-            "            color: white;\n" +
-            "            text-decoration: none;\n" +
-            "            border-radius: 24px;\n" +
-            "            margin: 20px 0;\n" +
-            "            font-weight: 500;\n" +
-            "            transition: all 0.3s ease;\n" +
-            "        }\n" +
-            "        .button:hover {\n" +
-            "            background: #66b1ff;\n" +
-            "            transform: translateY(-2px);\n" +
-            "        }\n" +
-            "        .minecraft-style {\n" +
-            "            font-family: 'Minecraft', 'Helvetica Neue', Arial, sans-serif;\n" +
-            "            text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.2);\n" +
-            "        }\n" +
-            "    </style>\n" +
-            "</head>\n" +
-            "<body>\n" +
-            "    <div class=\"container\">\n" +
-            "        <div class=\"header\">\n" +
-            "            <h1 class=\"minecraft-style\">✨ 白名单审核通知 ✨</h1>\n" +
-            "        </div>\n" +
-            "        \n" +
-            "        <div class=\"content\">\n" +
-            "            <p>亲爱的 {username}：</p>\n" +
-            "            <!-- 审核通过模板 -->\n" +
-            "            <!-- 审核拒绝模板 -->\n" +
-            "            <div class=\"info-box\">\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">游戏ID：</span>\n" +
-            "                    <span class=\"info-value\">{gameId}</span>\n" +
-            "                </div>\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">申请时间：</span>\n" +
-            "                    <span class=\"info-value\">{applyTime}</span>\n" +
-            "                </div>\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">审核时间：</span>\n" +
-            "                    <span class=\"info-value\">{reviewTime}</span>\n" +
-            "                </div>\n" +
-            "            </div>\n" +
-            "\n" +
-            "            <!-- 通过时显示 -->\n" +
-            "            <p>服务器信息：</p>\n" +
-            "            <div class=\"info-box\">\n" +
-            "                   {info}                    " +
-            "            </div>\n" +
-            "            \n" +
-            "            <p>温馨提示：</p>\n" +
-            "            <ul>\n" +
-            "                <li>请遵守服务器规则，与其他玩家和谐共处</li>\n" +
-            "                <li>如遇问题可以联系管理员寻求帮助</li>\n" +
-            "                <li>祝您游戏愉快！</li>\n" +
-            "            </ul>\n" +
-            "\n" +
-            "        </div>\n" +
-            "        \n" +
-            "        <div class=\"footer\">\n" +
-            "            <p>此邮件由系统自动发送，请勿回复</p>\n" +
-            "            <p>© 2025 Minecraft. All rights reserved.</p>\n" +
-            "        </div>\n" +
-            "    </div>\n" +
-            "</body>\n" +
-            "</html>";
+    public static final String WHITELIST_NOTIFICATION_TEMPLATE = """
+            <!DOCTYPE html>
+            <html>
+            <head>
+                <meta charset="UTF-8">
+                <title>白名单审核通知</title>
+                <style>
+                    body {
+                        margin: 0;
+                        padding: 0;
+                        font-family: 'Helvetica Neue', Arial, sans-serif;
+                        background-color: #f5f5f5;
+                    }
+                    .container {
+                        max-width: 600px;
+                        margin: 20px auto;
+                        background: #ffffff;
+                        border-radius: 16px;
+                        overflow: hidden;
+                        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+                    }
+                    .header {
+                        background: linear-gradient(135deg, #1e2f45, #2c3e50);
+                        color: white;
+                        padding: 30px;
+                        text-align: center;
+                    }
+                    .header h1 {
+                        margin: 0;
+                        font-size: 24px;
+                        font-weight: 600;
+                    }
+                    .content {
+                        padding: 30px;
+                        color: #2c3e50;
+                    }
+                    .status {
+                        text-align: center;
+                        margin: 20px 0;
+                        padding: 15px;
+                        border-radius: 8px;
+                        font-weight: 600;
+                        font-size: 18px;
+                    }
+                    .status.approved {
+                        background-color: #f0f9eb;
+                        color: #67C23A;
+                        border: 1px solid #e1f3d8;
+                    }
+                    .status.rejected {
+                        background-color: #fef0f0;
+                        color: #f56c6c;
+                        border: 1px solid #fde2e2;
+                    }
+                    .info-box {
+                        background: #f8f9fa;
+                        border-radius: 8px;
+                        padding: 20px;
+                        margin: 20px 0;
+                    }
+                    .info-item {
+                        margin: 10px 0;
+                        display: flex;
+                        justify-content: space-between;
+                    }
+                    .info-label {
+                        color: #606266;
+                        font-weight: 500;
+                    }
+                    .info-value {
+                        color: #409EFF;
+                        font-weight: 500;
+                    }
+                    .footer {
+                        background: #f8f9fa;
+                        padding: 20px;
+                        text-align: center;
+                        color: #909399;
+                        font-size: 14px;
+                    }
+                    .button {
+                        display: inline-block;
+                        padding: 12px 24px;
+                        background: #409EFF;
+                        color: white;
+                        text-decoration: none;
+                        border-radius: 24px;
+                        margin: 20px 0;
+                        font-weight: 500;
+                        transition: all 0.3s ease;
+                    }
+                    .button:hover {
+                        background: #66b1ff;
+                        transform: translateY(-2px);
+                    }
+                    .minecraft-style {
+                        font-family: 'Minecraft', 'Helvetica Neue', Arial, sans-serif;
+                        text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.2);
+                    }
+                </style>
+            </head>
+            <body>
+                <div class="container">
+                    <div class="header">
+                        <h1 class="minecraft-style">✨ 白名单审核通知 ✨</h1>
+                    </div>
+                   \s
+                    <div class="content">
+                        <p>亲爱的 {username}：</p>
+                        <!-- 审核通过模板 -->
+                        <!-- 审核拒绝模板 -->
+                        <div class="info-box">
+                            <div class="info-item">
+                                <span class="info-label">游戏ID：</span>
+                                <span class="info-value">{gameId}</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">申请时间：</span>
+                                <span class="info-value">{applyTime}</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">审核时间：</span>
+                                <span class="info-value">{reviewTime}</span>
+                            </div>
+                        </div>
+            
+                        <!-- 通过时显示 -->
+                        <p>服务器信息：</p>
+                        <div class="info-box">
+                               {info}                    \
+                        </div>
+                       \s
+                        <p>温馨提示：</p>
+                        <ul>
+                            <li>请遵守服务器规则，与其他玩家和谐共处</li>
+                            <li>如遇问题可以联系管理员寻求帮助</li>
+                            <li>祝您游戏愉快！</li>
+                        </ul>
+            
+                    </div>
+                   \s
+                    <div class="footer">
+                        <p>此邮件由系统自动发送，请勿回复</p>
+                        <p>© 2025 Minecraft. All rights reserved.</p>
+                    </div>
+                </div>
+            </body>
+            </html>""";
 
 
-    public static final String WHITELIST_NOTIFICATION_TEMPLATE_BAN = "<!DOCTYPE html>\n" +
-            "<html>\n" +
-            "<head>\n" +
-            "    <meta charset=\"UTF-8\">\n" +
-            "    <title>白名单移除通知</title>\n" +
-            "    <style>\n" +
-            "        body {\n" +
-            "            margin: 0;\n" +
-            "            padding: 0;\n" +
-            "            font-family: 'Helvetica Neue', Arial, sans-serif;\n" +
-            "            background-color: #f5f5f5;\n" +
-            "        }\n" +
-            "        .container {\n" +
-            "            max-width: 600px;\n" +
-            "            margin: 20px auto;\n" +
-            "            background: #ffffff;\n" +
-            "            border-radius: 16px;\n" +
-            "            overflow: hidden;\n" +
-            "            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);\n" +
-            "        }\n" +
-            "        .header {\n" +
-            "            background: linear-gradient(135deg, #1e2f45, #2c3e50);\n" +
-            "            color: white;\n" +
-            "            padding: 30px;\n" +
-            "            text-align: center;\n" +
-            "        }\n" +
-            "        .header h1 {\n" +
-            "            margin: 0;\n" +
-            "            font-size: 24px;\n" +
-            "            font-weight: 600;\n" +
-            "        }\n" +
-            "        .content {\n" +
-            "            padding: 30px;\n" +
-            "            color: #2c3e50;\n" +
-            "        }\n" +
-            "        .status {\n" +
-            "            text-align: center;\n" +
-            "            margin: 20px 0;\n" +
-            "            padding: 15px;\n" +
-            "            border-radius: 8px;\n" +
-            "            font-weight: 600;\n" +
-            "            font-size: 18px;\n" +
-            "        }\n" +
-            "        .status.approved {\n" +
-            "            background-color: #f0f9eb;\n" +
-            "            color: #67C23A;\n" +
-            "            border: 1px solid #e1f3d8;\n" +
-            "        }\n" +
-            "        .status.rejected {\n" +
-            "            background-color: #fef0f0;\n" +
-            "            color: #f56c6c;\n" +
-            "            border: 1px solid #fde2e2;\n" +
-            "        }\n" +
-            "        .info-box {\n" +
-            "            background: #f8f9fa;\n" +
-            "            border-radius: 8px;\n" +
-            "            padding: 20px;\n" +
-            "            margin: 20px 0;\n" +
-            "        }\n" +
-            "        .info-item {\n" +
-            "            margin: 10px 0;\n" +
-            "            display: flex;\n" +
-            "            justify-content: space-between;\n" +
-            "        }\n" +
-            "        .info-label {\n" +
-            "            color: #606266;\n" +
-            "            font-weight: 500;\n" +
-            "        }\n" +
-            "        .info-value {\n" +
-            "            color: #409EFF;\n" +
-            "            font-weight: 500;\n" +
-            "        }\n" +
-            "        .footer {\n" +
-            "            background: #f8f9fa;\n" +
-            "            padding: 20px;\n" +
-            "            text-align: center;\n" +
-            "            color: #909399;\n" +
-            "            font-size: 14px;\n" +
-            "        }\n" +
-            "        .button {\n" +
-            "            display: inline-block;\n" +
-            "            padding: 12px 24px;\n" +
-            "            background: #409EFF;\n" +
-            "            color: white;\n" +
-            "            text-decoration: none;\n" +
-            "            border-radius: 24px;\n" +
-            "            margin: 20px 0;\n" +
-            "            font-weight: 500;\n" +
-            "            transition: all 0.3s ease;\n" +
-            "        }\n" +
-            "        .button:hover {\n" +
-            "            background: #66b1ff;\n" +
-            "            transform: translateY(-2px);\n" +
-            "        }\n" +
-            "        .minecraft-style {\n" +
-            "            font-family: 'Minecraft', 'Helvetica Neue', Arial, sans-serif;\n" +
-            "            text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.2);\n" +
-            "        }\n" +
-            "    </style>\n" +
-            "</head>\n" +
-            "<body>\n" +
-            "    <div class=\"container\">\n" +
-            "        <div class=\"header\">\n" +
-            "            <h1 class=\"minecraft-style\">🚫 白名单移除通知 🚫</h1>\n" +
-            "        </div>\n" +
-            "        \n" +
-            "        <div class=\"content\">\n" +
-            "            <p>你好 {username}：</p>\n" +
-            "            \n" +
-            "            <!-- 移除模板 -->\n" +
-            "            <!-- 解禁模板 -->\n" +
-            "            <!-- 封禁模板 -->\n" +
-            "            \n" +
-            "            <div class=\"info-box\">\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">游戏ID：</span>\n" +
-            "                    <span class=\"info-value\">{gameId}</span>\n" +
-            "                </div>\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">申请时间：</span>\n" +
-            "                    <span class=\"info-value\">{applyTime}</span>\n" +
-            "                </div>\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">{timeTittle}：</span>\n" +
-            "                    <span class=\"info-value\">{time}</span>\n" +
-            "                </div>\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">原因：</span>\n" +
-            "                    <span class=\"info-value\">{removeReason}</span>\n" +
-            "                </div>\n" +
-            "            </div>\n" +
-            "\n" +
-            "            <p>温馨提示：</p>\n" +
-            "            <ul>\n" +
-            "                <li>请遵守服务器规则，与其他玩家和谐共处</li>\n" +
-            "                <li>如遇问题可以联系管理员寻求帮助</li>\n" +
-            "            </ul>\n" +
-            "\n" +
-            "        </div>\n" +
-            "        \n" +
-            "        <div class=\"footer\">\n" +
-            "            <p>此邮件由系统自动发送，请勿回复</p>\n" +
-            "            <p>© 2025 Minecraft. All rights reserved.</p>\n" +
-            "        </div>\n" +
-            "    </div>\n" +
-            "</body>\n" +
-            "</html>";
+    public static final String WHITELIST_NOTIFICATION_TEMPLATE_BAN = """
+            <!DOCTYPE html>
+            <html>
+            <head>
+                <meta charset="UTF-8">
+                <title>白名单移除通知</title>
+                <style>
+                    body {
+                        margin: 0;
+                        padding: 0;
+                        font-family: 'Helvetica Neue', Arial, sans-serif;
+                        background-color: #f5f5f5;
+                    }
+                    .container {
+                        max-width: 600px;
+                        margin: 20px auto;
+                        background: #ffffff;
+                        border-radius: 16px;
+                        overflow: hidden;
+                        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+                    }
+                    .header {
+                        background: linear-gradient(135deg, #1e2f45, #2c3e50);
+                        color: white;
+                        padding: 30px;
+                        text-align: center;
+                    }
+                    .header h1 {
+                        margin: 0;
+                        font-size: 24px;
+                        font-weight: 600;
+                    }
+                    .content {
+                        padding: 30px;
+                        color: #2c3e50;
+                    }
+                    .status {
+                        text-align: center;
+                        margin: 20px 0;
+                        padding: 15px;
+                        border-radius: 8px;
+                        font-weight: 600;
+                        font-size: 18px;
+                    }
+                    .status.approved {
+                        background-color: #f0f9eb;
+                        color: #67C23A;
+                        border: 1px solid #e1f3d8;
+                    }
+                    .status.rejected {
+                        background-color: #fef0f0;
+                        color: #f56c6c;
+                        border: 1px solid #fde2e2;
+                    }
+                    .info-box {
+                        background: #f8f9fa;
+                        border-radius: 8px;
+                        padding: 20px;
+                        margin: 20px 0;
+                    }
+                    .info-item {
+                        margin: 10px 0;
+                        display: flex;
+                        justify-content: space-between;
+                    }
+                    .info-label {
+                        color: #606266;
+                        font-weight: 500;
+                    }
+                    .info-value {
+                        color: #409EFF;
+                        font-weight: 500;
+                    }
+                    .footer {
+                        background: #f8f9fa;
+                        padding: 20px;
+                        text-align: center;
+                        color: #909399;
+                        font-size: 14px;
+                    }
+                    .button {
+                        display: inline-block;
+                        padding: 12px 24px;
+                        background: #409EFF;
+                        color: white;
+                        text-decoration: none;
+                        border-radius: 24px;
+                        margin: 20px 0;
+                        font-weight: 500;
+                        transition: all 0.3s ease;
+                    }
+                    .button:hover {
+                        background: #66b1ff;
+                        transform: translateY(-2px);
+                    }
+                    .minecraft-style {
+                        font-family: 'Minecraft', 'Helvetica Neue', Arial, sans-serif;
+                        text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.2);
+                    }
+                </style>
+            </head>
+            <body>
+                <div class="container">
+                    <div class="header">
+                        <h1 class="minecraft-style">🚫 白名单移除通知 🚫</h1>
+                    </div>
+                   \s
+                    <div class="content">
+                        <p>你好 {username}：</p>
+                       \s
+                        <!-- 移除模板 -->
+                        <!-- 解禁模板 -->
+                        <!-- 封禁模板 -->
+                       \s
+                        <div class="info-box">
+                            <div class="info-item">
+                                <span class="info-label">游戏ID：</span>
+                                <span class="info-value">{gameId}</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">申请时间：</span>
+                                <span class="info-value">{applyTime}</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">{timeTittle}：</span>
+                                <span class="info-value">{time}</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">原因：</span>
+                                <span class="info-value">{removeReason}</span>
+                            </div>
+                        </div>
+            
+                        <p>温馨提示：</p>
+                        <ul>
+                            <li>请遵守服务器规则，与其他玩家和谐共处</li>
+                            <li>如遇问题可以联系管理员寻求帮助</li>
+                        </ul>
+            
+                    </div>
+                   \s
+                    <div class="footer">
+                        <p>此邮件由系统自动发送，请勿回复</p>
+                        <p>© 2025 Minecraft. All rights reserved.</p>
+                    </div>
+                </div>
+            </body>
+            </html>""";
 
-    public static final String WHITELIST_NOTIFICATION_TEMPLATE_UNBAN = "<!DOCTYPE html>\n" +
-            "<html>\n" +
-            "<head>\n" +
-            "    <meta charset=\"UTF-8\">\n" +
-            "    <title>封禁解除通知</title>\n" +
-            "    <style>\n" +
-            "        body {\n" +
-            "            margin: 0;\n" +
-            "            padding: 0;\n" +
-            "            font-family: 'Helvetica Neue', Arial, sans-serif;\n" +
-            "            background-color: #f5f5f5;\n" +
-            "        }\n" +
-            "        .container {\n" +
-            "            max-width: 600px;\n" +
-            "            margin: 20px auto;\n" +
-            "            background: #ffffff;\n" +
-            "            border-radius: 16px;\n" +
-            "            overflow: hidden;\n" +
-            "            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);\n" +
-            "        }\n" +
-            "        .header {\n" +
-            "            background: linear-gradient(135deg, #1e2f45, #2c3e50);\n" +
-            "            color: white;\n" +
-            "            padding: 30px;\n" +
-            "            text-align: center;\n" +
-            "        }\n" +
-            "        .header h1 {\n" +
-            "            margin: 0;\n" +
-            "            font-size: 24px;\n" +
-            "            font-weight: 600;\n" +
-            "        }\n" +
-            "        .content {\n" +
-            "            padding: 30px;\n" +
-            "            color: #2c3e50;\n" +
-            "        }\n" +
-            "        .status {\n" +
-            "            text-align: center;\n" +
-            "            margin: 20px 0;\n" +
-            "            padding: 15px;\n" +
-            "            border-radius: 8px;\n" +
-            "            font-weight: 600;\n" +
-            "            font-size: 18px;\n" +
-            "        }\n" +
-            "        .status.approved {\n" +
-            "            background-color: #f0f9eb;\n" +
-            "            color: #67C23A;\n" +
-            "            border: 1px solid #e1f3d8;\n" +
-            "        }\n" +
-            "        .status.rejected {\n" +
-            "            background-color: #fef0f0;\n" +
-            "            color: #f56c6c;\n" +
-            "            border: 1px solid #fde2e2;\n" +
-            "        }\n" +
-            "        .info-box {\n" +
-            "            background: #f8f9fa;\n" +
-            "            border-radius: 8px;\n" +
-            "            padding: 20px;\n" +
-            "            margin: 20px 0;\n" +
-            "        }\n" +
-            "        .info-item {\n" +
-            "            margin: 10px 0;\n" +
-            "            display: flex;\n" +
-            "            justify-content: space-between;\n" +
-            "        }\n" +
-            "        .info-label {\n" +
-            "            color: #606266;\n" +
-            "            font-weight: 500;\n" +
-            "        }\n" +
-            "        .info-value {\n" +
-            "            color: #409EFF;\n" +
-            "            font-weight: 500;\n" +
-            "        }\n" +
-            "        .footer {\n" +
-            "            background: #f8f9fa;\n" +
-            "            padding: 20px;\n" +
-            "            text-align: center;\n" +
-            "            color: #909399;\n" +
-            "            font-size: 14px;\n" +
-            "        }\n" +
-            "        .button {\n" +
-            "            display: inline-block;\n" +
-            "            padding: 12px 24px;\n" +
-            "            background: #409EFF;\n" +
-            "            color: white;\n" +
-            "            text-decoration: none;\n" +
-            "            border-radius: 24px;\n" +
-            "            margin: 20px 0;\n" +
-            "            font-weight: 500;\n" +
-            "            transition: all 0.3s ease;\n" +
-            "        }\n" +
-            "        .button:hover {\n" +
-            "            background: #66b1ff;\n" +
-            "            transform: translateY(-2px);\n" +
-            "        }\n" +
-            "        .minecraft-style {\n" +
-            "            font-family: 'Minecraft', 'Helvetica Neue', Arial, sans-serif;\n" +
-            "            text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.2);\n" +
-            "        }\n" +
-            "    </style>\n" +
-            "</head>\n" +
-            "<body>\n" +
-            "    <div class=\"container\">\n" +
-            "        <div class=\"header\">\n" +
-            "            <h1 class=\"minecraft-style\">🎉 封禁解除通知 🎉</h1>\n" +
-            "        </div>\n" +
-            "        \n" +
-            "        <div class=\"content\">\n" +
-            "            <p>你好 {username}：</p>\n" +
-            "            \n" +
-            "            <!-- 解禁模板 -->\n" +
-            "            \n" +
-            "            <div class=\"info-box\">\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">游戏ID：</span>\n" +
-            "                    <span class=\"info-value\">{gameId}</span>\n" +
-            "                </div>\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">封禁时间：</span>\n" +
-            "                    <span class=\"info-value\">{banTime}</span>\n" +
-            "                </div>\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">解禁时间：</span>\n" +
-            "                    <span class=\"info-value\">{unBanTime}</span>\n" +
-            "                </div>\n" +
-            "            </div>\n" +
-            "\n" +
-            "            <p>温馨提示：</p>\n" +
-            "            <ul>\n" +
-            "                <li>请遵守服务器规则，与其他玩家和谐共处</li>\n" +
-            "                <li>如遇问题可以联系管理员寻求帮助</li>\n" +
-            "            </ul>\n" +
-            "\n" +
-            "        </div>\n" +
-            "        \n" +
-            "        <div class=\"footer\">\n" +
-            "            <p>此邮件由系统自动发送，请勿回复</p>\n" +
-            "            <p>© 2025 Minecraft. All rights reserved.</p>\n" +
-            "        </div>\n" +
-            "    </div>\n" +
-            "</body>\n" +
-            "</html>";
+    public static final String WHITELIST_NOTIFICATION_TEMPLATE_UNBAN = """
+            <!DOCTYPE html>
+            <html>
+            <head>
+                <meta charset="UTF-8">
+                <title>封禁解除通知</title>
+                <style>
+                    body {
+                        margin: 0;
+                        padding: 0;
+                        font-family: 'Helvetica Neue', Arial, sans-serif;
+                        background-color: #f5f5f5;
+                    }
+                    .container {
+                        max-width: 600px;
+                        margin: 20px auto;
+                        background: #ffffff;
+                        border-radius: 16px;
+                        overflow: hidden;
+                        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+                    }
+                    .header {
+                        background: linear-gradient(135deg, #1e2f45, #2c3e50);
+                        color: white;
+                        padding: 30px;
+                        text-align: center;
+                    }
+                    .header h1 {
+                        margin: 0;
+                        font-size: 24px;
+                        font-weight: 600;
+                    }
+                    .content {
+                        padding: 30px;
+                        color: #2c3e50;
+                    }
+                    .status {
+                        text-align: center;
+                        margin: 20px 0;
+                        padding: 15px;
+                        border-radius: 8px;
+                        font-weight: 600;
+                        font-size: 18px;
+                    }
+                    .status.approved {
+                        background-color: #f0f9eb;
+                        color: #67C23A;
+                        border: 1px solid #e1f3d8;
+                    }
+                    .status.rejected {
+                        background-color: #fef0f0;
+                        color: #f56c6c;
+                        border: 1px solid #fde2e2;
+                    }
+                    .info-box {
+                        background: #f8f9fa;
+                        border-radius: 8px;
+                        padding: 20px;
+                        margin: 20px 0;
+                    }
+                    .info-item {
+                        margin: 10px 0;
+                        display: flex;
+                        justify-content: space-between;
+                    }
+                    .info-label {
+                        color: #606266;
+                        font-weight: 500;
+                    }
+                    .info-value {
+                        color: #409EFF;
+                        font-weight: 500;
+                    }
+                    .footer {
+                        background: #f8f9fa;
+                        padding: 20px;
+                        text-align: center;
+                        color: #909399;
+                        font-size: 14px;
+                    }
+                    .button {
+                        display: inline-block;
+                        padding: 12px 24px;
+                        background: #409EFF;
+                        color: white;
+                        text-decoration: none;
+                        border-radius: 24px;
+                        margin: 20px 0;
+                        font-weight: 500;
+                        transition: all 0.3s ease;
+                    }
+                    .button:hover {
+                        background: #66b1ff;
+                        transform: translateY(-2px);
+                    }
+                    .minecraft-style {
+                        font-family: 'Minecraft', 'Helvetica Neue', Arial, sans-serif;
+                        text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.2);
+                    }
+                </style>
+            </head>
+            <body>
+                <div class="container">
+                    <div class="header">
+                        <h1 class="minecraft-style">🎉 封禁解除通知 🎉</h1>
+                    </div>
+                   \s
+                    <div class="content">
+                        <p>你好 {username}：</p>
+                       \s
+                        <!-- 解禁模板 -->
+                       \s
+                        <div class="info-box">
+                            <div class="info-item">
+                                <span class="info-label">游戏ID：</span>
+                                <span class="info-value">{gameId}</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">封禁时间：</span>
+                                <span class="info-value">{banTime}</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">解禁时间：</span>
+                                <span class="info-value">{unBanTime}</span>
+                            </div>
+                        </div>
+            
+                        <p>温馨提示：</p>
+                        <ul>
+                            <li>请遵守服务器规则，与其他玩家和谐共处</li>
+                            <li>如遇问题可以联系管理员寻求帮助</li>
+                        </ul>
+            
+                    </div>
+                   \s
+                    <div class="footer">
+                        <p>此邮件由系统自动发送，请勿回复</p>
+                        <p>© 2025 Minecraft. All rights reserved.</p>
+                    </div>
+                </div>
+            </body>
+            </html>""";
 
     // 待审核
-    public static final String WHITELIST_NOTIFICATION_TEMPLATE_PENDING = "<!DOCTYPE html>\n" +
-            "<html>\n" +
-            "<head>\n" +
-            "    <meta charset=\"UTF-8\">\n" +
-            "    <title>白名单已提交</title>\n" +
-            "    <style>\n" +
-            "        body {\n" +
-            "            margin: 0;\n" +
-            "            padding: 0;\n" +
-            "            font-family: 'Helvetica Neue', Arial, sans-serif;\n" +
-            "            background-color: #f5f5f5;\n" +
-            "        }\n" +
-            "        .container {\n" +
-            "            max-width: 600px;\n" +
-            "            margin: 20px auto;\n" +
-            "            background: #ffffff;\n" +
-            "            border-radius: 16px;\n" +
-            "            overflow: hidden;\n" +
-            "            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);\n" +
-            "        }\n" +
-            "        .header {\n" +
-            "            background: linear-gradient(135deg, #1e2f45, #2c3e50);\n" +
-            "            color: white;\n" +
-            "            padding: 30px;\n" +
-            "            text-align: center;\n" +
-            "        }\n" +
-            "        .header h1 {\n" +
-            "            margin: 0;\n" +
-            "            font-size: 24px;\n" +
-            "            font-weight: 600;\n" +
-            "        }\n" +
-            "        .content {\n" +
-            "            padding: 30px;\n" +
-            "            color: #2c3e50;\n" +
-            "        }\n" +
-            "        .status {\n" +
-            "            text-align: center;\n" +
-            "            margin: 20px 0;\n" +
-            "            padding: 15px;\n" +
-            "            border-radius: 8px;\n" +
-            "            font-weight: 600;\n" +
-            "            font-size: 18px;\n" +
-            "        }\n" +
-            "        .status.approved {\n" +
-            "            background-color: #f0f9eb;\n" +
-            "            color: #67C23A;\n" +
-            "            border: 1px solid #e1f3d8;\n" +
-            "        }\n" +
-            "        .status.rejected {\n" +
-            "            background-color: #fef0f0;\n" +
-            "            color: #f56c6c;\n" +
-            "            border: 1px solid #fde2e2;\n" +
-            "        }\n" +
-            "        .info-box {\n" +
-            "            background: #f8f9fa;\n" +
-            "            border-radius: 8px;\n" +
-            "            padding: 20px;\n" +
-            "            margin: 20px 0;\n" +
-            "        }\n" +
-            "        .info-item {\n" +
-            "            margin: 10px 0;\n" +
-            "            display: flex;\n" +
-            "            justify-content: space-between;\n" +
-            "        }\n" +
-            "        .info-label {\n" +
-            "            color: #606266;\n" +
-            "            font-weight: 500;\n" +
-            "        }\n" +
-            "        .info-value {\n" +
-            "            color: #409EFF;\n" +
-            "            font-weight: 500;\n" +
-            "        }\n" +
-            "        .footer {\n" +
-            "            background: #f8f9fa;\n" +
-            "            padding: 20px;\n" +
-            "            text-align: center;\n" +
-            "            color: #909399;\n" +
-            "            font-size: 14px;\n" +
-            "        }\n" +
-            "        .button {\n" +
-            "            display: inline-block;\n" +
-            "            padding: 12px 24px;\n" +
-            "            background: #409EFF;\n" +
-            "            color: white;\n" +
-            "            text-decoration: none;\n" +
-            "            border-radius: 24px;\n" +
-            "            margin: 20px 0;\n" +
-            "            font-weight: 500;\n" +
-            "            transition: all 0.3s ease;\n" +
-            "        }\n" +
-            "        .button:hover {\n" +
-            "            background: #66b1ff;\n" +
-            "            transform: translateY(-2px);\n" +
-            "        }\n" +
-            "        .minecraft-style {\n" +
-            "            font-family: 'Minecraft', 'Helvetica Neue', Arial, sans-serif;\n" +
-            "            text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.2);\n" +
-            "        }\n" +
-            "    </style>\n" +
-            "</head>\n" +
-            "<body>\n" +
-            "    <div class=\"container\">\n" +
-            "        <div class=\"header\">\n" +
-            "            <h1 class=\"minecraft-style\">🎉 您的白名单已成功提交 🎉</h1>\n" +
-            "        </div>\n" +
-            "        \n" +
-            "        <div class=\"content\">\n" +
-            "            <p>你好 {username}：</p>\n" +
-            "            \n" +
-            "            <!-- 提交模板 -->\n" +
-            "            \n" +
-            "            <div class=\"info-box\">\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">游戏ID：</span>\n" +
-            "                    <span class=\"info-value\">{gameId}</span>\n" +
-            "                </div>\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">提交时间：</span>\n" +
-            "                    <span class=\"info-value\">{applyTime}</span>\n" +
-            "                </div>\n" +
-            "            </div>\n" +
-            "\n" +
-            "            <p>温馨提示：</p>\n" +
-            "            <ul>\n" +
-            "                <li>如遇问题可以联系管理员寻求帮助</li>\n" +
-            "            </ul>\n" +
-            "\n" +
-            "        </div>\n" +
-            "        \n" +
-            "        <div class=\"footer\">\n" +
-            "            <p>此邮件由系统自动发送，请勿回复</p>\n" +
-            "            <p>© 2025 Minecraft. All rights reserved.</p>\n" +
-            "        </div>\n" +
-            "    </div>\n" +
-            "</body>\n" +
-            "</html>";
+    public static final String WHITELIST_NOTIFICATION_TEMPLATE_PENDING = """
+            <!DOCTYPE html>
+            <html>
+            <head>
+                <meta charset="UTF-8">
+                <title>白名单已提交</title>
+                <style>
+                    body {
+                        margin: 0;
+                        padding: 0;
+                        font-family: 'Helvetica Neue', Arial, sans-serif;
+                        background-color: #f5f5f5;
+                    }
+                    .container {
+                        max-width: 600px;
+                        margin: 20px auto;
+                        background: #ffffff;
+                        border-radius: 16px;
+                        overflow: hidden;
+                        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+                    }
+                    .header {
+                        background: linear-gradient(135deg, #1e2f45, #2c3e50);
+                        color: white;
+                        padding: 30px;
+                        text-align: center;
+                    }
+                    .header h1 {
+                        margin: 0;
+                        font-size: 24px;
+                        font-weight: 600;
+                    }
+                    .content {
+                        padding: 30px;
+                        color: #2c3e50;
+                    }
+                    .status {
+                        text-align: center;
+                        margin: 20px 0;
+                        padding: 15px;
+                        border-radius: 8px;
+                        font-weight: 600;
+                        font-size: 18px;
+                    }
+                    .status.approved {
+                        background-color: #f0f9eb;
+                        color: #67C23A;
+                        border: 1px solid #e1f3d8;
+                    }
+                    .status.rejected {
+                        background-color: #fef0f0;
+                        color: #f56c6c;
+                        border: 1px solid #fde2e2;
+                    }
+                    .info-box {
+                        background: #f8f9fa;
+                        border-radius: 8px;
+                        padding: 20px;
+                        margin: 20px 0;
+                    }
+                    .info-item {
+                        margin: 10px 0;
+                        display: flex;
+                        justify-content: space-between;
+                    }
+                    .info-label {
+                        color: #606266;
+                        font-weight: 500;
+                    }
+                    .info-value {
+                        color: #409EFF;
+                        font-weight: 500;
+                    }
+                    .footer {
+                        background: #f8f9fa;
+                        padding: 20px;
+                        text-align: center;
+                        color: #909399;
+                        font-size: 14px;
+                    }
+                    .button {
+                        display: inline-block;
+                        padding: 12px 24px;
+                        background: #409EFF;
+                        color: white;
+                        text-decoration: none;
+                        border-radius: 24px;
+                        margin: 20px 0;
+                        font-weight: 500;
+                        transition: all 0.3s ease;
+                    }
+                    .button:hover {
+                        background: #66b1ff;
+                        transform: translateY(-2px);
+                    }
+                    .minecraft-style {
+                        font-family: 'Minecraft', 'Helvetica Neue', Arial, sans-serif;
+                        text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.2);
+                    }
+                </style>
+            </head>
+            <body>
+                <div class="container">
+                    <div class="header">
+                        <h1 class="minecraft-style">🎉 您的白名单已成功提交 🎉</h1>
+                    </div>
+                   \s
+                    <div class="content">
+                        <p>你好 {username}：</p>
+                       \s
+                        <!-- 提交模板 -->
+                       \s
+                        <div class="info-box">
+                            <div class="info-item">
+                                <span class="info-label">游戏ID：</span>
+                                <span class="info-value">{gameId}</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">提交时间：</span>
+                                <span class="info-value">{applyTime}</span>
+                            </div>
+                        </div>
+            
+                        <p>温馨提示：</p>
+                        <ul>
+                            <li>如遇问题可以联系管理员寻求帮助</li>
+                        </ul>
+            
+                    </div>
+                   \s
+                    <div class="footer">
+                        <p>此邮件由系统自动发送，请勿回复</p>
+                        <p>© 2025 Minecraft. All rights reserved.</p>
+                    </div>
+                </div>
+            </body>
+            </html>""";
 
     public static final String ALERT_TITLE = "系统异常告警";
 
-    public static final String ALERT_TEMPLATE = "<!DOCTYPE html>\n" +
-            "<html>\n" +
-            "<head>\n" +
-            "    <meta charset=\"UTF-8\">\n" +
-            "    <title>系统异常告警</title>\n" +
-            "    <style>\n" +
-            "        body {\n" +
-            "            margin: 0;\n" +
-            "            padding: 0;\n" +
-            "            font-family: 'Helvetica Neue', Arial, sans-serif;\n" +
-            "            background-color: #f5f5f5;\n" +
-            "        }\n" +
-            "        .container {\n" +
-            "            max-width: 600px;\n" +
-            "            margin: 20px auto;\n" +
-            "            background: #ffffff;\n" +
-            "            border-radius: 16px;\n" +
-            "            overflow: hidden;\n" +
-            "            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);\n" +
-            "        }\n" +
-            "        .header {\n" +
-            "            background: linear-gradient(135deg, #ff4d4d, #ff1a1a);\n" +
-            "            color: white;\n" +
-            "            padding: 30px;\n" +
-            "            text-align: center;\n" +
-            "        }\n" +
-            "        .header h1 {\n" +
-            "            margin: 0;\n" +
-            "            font-size: 24px;\n" +
-            "            font-weight: 600;\n" +
-            "        }\n" +
-            "        .content {\n" +
-            "            padding: 30px;\n" +
-            "            color: #2c3e50;\n" +
-            "        }\n" +
-            "        .alert-info {\n" +
-            "            background: #fff3f3;\n" +
-            "            border-left: 4px solid #ff4d4d;\n" +
-            "            padding: 15px;\n" +
-            "            margin: 20px 0;\n" +
-            "        }\n" +
-            "        .info-box {\n" +
-            "            background: #f8f9fa;\n" +
-            "            border-radius: 8px;\n" +
-            "            padding: 20px;\n" +
-            "            margin: 20px 0;\n" +
-            "        }\n" +
-            "        .info-item {\n" +
-            "            margin: 10px 0;\n" +
-            "            display: flex;\n" +
-            "            align-items: center;\n" +
-            "        }\n" +
-            "        .info-label {\n" +
-            "            font-weight: 600;\n" +
-            "            min-width: 120px;\n" +
-            "            color: #666;\n" +
-            "        }\n" +
-            "        .info-value {\n" +
-            "            color: #333;\n" +
-            "        }\n" +
-            "        .footer {\n" +
-            "            text-align: center;\n" +
-            "            padding: 20px;\n" +
-            "            background: #f8f9fa;\n" +
-            "            color: #666;\n" +
-            "        }\n" +
-            "    </style>\n" +
-            "</head>\n" +
-            "<body>\n" +
-            "    <div class=\"container\">\n" +
-            "        <div class=\"header\">\n" +
-            "            <h1>系统异常告警</h1>\n" +
-            "        </div>\n" +
-            "        \n" +
-            "        <div class=\"content\">\n" +
-            "            <div class=\"alert-info\">\n" +
-            "                <p>系统检测到异常情况，请及时处理！</p>\n" +
-            "            </div>\n" +
-            "            \n" +
-            "            <div class=\"info-box\">\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">异常时间：</span>\n" +
-            "                    <span class=\"info-value\">{time}</span>\n" +
-            "                </div>\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">异常次数：</span>\n" +
-            "                    <span class=\"info-value\">{count}</span>\n" +
-            "                </div>\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">异常类型：</span>\n" +
-            "                    <span class=\"info-value\">{type}</span>\n" +
-            "                </div>\n" +
-            "            </div>\n" +
-            "            \n" +
-            "            <div class=\"info-box\">\n" +
-            "                <h3>服务器信息</h3>\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">服务器名称：</span>\n" +
-            "                    <span class=\"info-value\">{serverName}</span>\n" +
-            "                </div>\n" +
-            "                <div class=\"info-item\">\n" +
-            "                    <span class=\"info-label\">服务器地址：</span>\n" +
-            "                    <span class=\"info-value\">{serverAddress}</span>\n" +
-            "                </div>\n" +
-            "            </div>\n" +
-            "            \n" +
-            "            <p>温馨提示：</p>\n" +
-            "            <ul>\n" +
-            "                <li>请及时检查系统运行状态</li>\n" +
-            "                <li>如遇问题可以联系系统管理员</li>\n" +
-            "            </ul>\n" +
-            "        </div>\n" +
-            "        \n" +
-            "        <div class=\"footer\">\n" +
-            "            <p>此邮件由系统自动发送，请勿回复</p>\n" +
-            "            <p>© 2025 Minecraft. All rights reserved.</p>\n" +
-            "        </div>\n" +
-            "    </div>\n" +
-            "</body>\n" +
-            "</html>";
+    public static final String ALERT_TEMPLATE = """
+            <!DOCTYPE html>
+            <html>
+            <head>
+                <meta charset="UTF-8">
+                <title>系统异常告警</title>
+                <style>
+                    body {
+                        margin: 0;
+                        padding: 0;
+                        font-family: 'Helvetica Neue', Arial, sans-serif;
+                        background-color: #f5f5f5;
+                    }
+                    .container {
+                        max-width: 600px;
+                        margin: 20px auto;
+                        background: #ffffff;
+                        border-radius: 16px;
+                        overflow: hidden;
+                        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+                    }
+                    .header {
+                        background: linear-gradient(135deg, #ff4d4d, #ff1a1a);
+                        color: white;
+                        padding: 30px;
+                        text-align: center;
+                    }
+                    .header h1 {
+                        margin: 0;
+                        font-size: 24px;
+                        font-weight: 600;
+                    }
+                    .content {
+                        padding: 30px;
+                        color: #2c3e50;
+                    }
+                    .alert-info {
+                        background: #fff3f3;
+                        border-left: 4px solid #ff4d4d;
+                        padding: 15px;
+                        margin: 20px 0;
+                    }
+                    .info-box {
+                        background: #f8f9fa;
+                        border-radius: 8px;
+                        padding: 20px;
+                        margin: 20px 0;
+                    }
+                    .info-item {
+                        margin: 10px 0;
+                        display: flex;
+                        align-items: center;
+                    }
+                    .info-label {
+                        font-weight: 600;
+                        min-width: 120px;
+                        color: #666;
+                    }
+                    .info-value {
+                        color: #333;
+                    }
+                    .footer {
+                        text-align: center;
+                        padding: 20px;
+                        background: #f8f9fa;
+                        color: #666;
+                    }
+                </style>
+            </head>
+            <body>
+                <div class="container">
+                    <div class="header">
+                        <h1>系统异常告警</h1>
+                    </div>
+                   \s
+                    <div class="content">
+                        <div class="alert-info">
+                            <p>系统检测到异常情况，请及时处理！</p>
+                        </div>
+                       \s
+                        <div class="info-box">
+                            <div class="info-item">
+                                <span class="info-label">异常时间：</span>
+                                <span class="info-value">{time}</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">异常次数：</span>
+                                <span class="info-value">{count}</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">异常类型：</span>
+                                <span class="info-value">{type}</span>
+                            </div>
+                        </div>
+                       \s
+                        <div class="info-box">
+                            <h3>服务器信息</h3>
+                            <div class="info-item">
+                                <span class="info-label">服务器名称：</span>
+                                <span class="info-value">{serverName}</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">服务器地址：</span>
+                                <span class="info-value">{serverAddress}</span>
+                            </div>
+                        </div>
+                       \s
+                        <p>温馨提示：</p>
+                        <ul>
+                            <li>请及时检查系统运行状态</li>
+                            <li>如遇问题可以联系系统管理员</li>
+                        </ul>
+                    </div>
+                   \s
+                    <div class="footer">
+                        <p>此邮件由系统自动发送，请勿回复</p>
+                        <p>© 2025 Minecraft. All rights reserved.</p>
+                    </div>
+                </div>
+            </body>
+            </html>""";
 
     // 替换模板中的变量
     public static String getWhitelistNotification(String username, String gameId, String applyTime,
@@ -861,36 +867,37 @@ public class EmailTemplates {
         boolean custom = false;
 
         // 根据不同状态获取自定义模板
-        switch (titte) {
-            case FAIL_TITLE:
+        template = switch (titte) {
+            case FAIL_TITLE -> {
                 if (!EmailTempCache.isEmpty() && EmailTempCache.get(key) != null) {
                     final CustomEmailTemplates defaultTemp = EmailTempCache.get(key);
                     template = defaultTemp.getRefuseTemp() != null ? defaultTemp.getRefuseTemp() : WHITELIST_NOTIFICATION_TEMPLATE;
                     // custom = defaultTemp.getRefuseTemp() != null;
                 }
-                template = template.replace(
+                yield template.replace(
                         "<!-- 审核拒绝模板 -->",
                         "<div class=\"status rejected\"><span>😢 很抱歉，您的白名单申请未通过</span></div>"
                 ).replace(
                         "<!-- 审核通过模板 -->",
                         ""
                 );
-                break;
-            case SUCCESS_TITLE:
+            }
+            case SUCCESS_TITLE -> {
                 if (!EmailTempCache.isEmpty() && EmailTempCache.get(key) != null) {
                     final CustomEmailTemplates defaultTemp = EmailTempCache.get(key);
                     template = defaultTemp.getPassTemp() != null ? defaultTemp.getPassTemp() : WHITELIST_NOTIFICATION_TEMPLATE;
                     custom = defaultTemp.getPassTemp() != null;
                 }
-                template = template.replace(
+                yield template.replace(
                         "<!-- 审核通过模板 -->",
                         "<div class=\"status approved\"><span>🎉 恭喜，您的白名单申请已通过！</span></div>"
                 ).replace(
                         "<!-- 审核拒绝模板 -->",
                         ""
                 );
-                break;
-        }
+            }
+            default -> template;
+        };
 
         // 替换基本变量
         template = template.replace("{username}", username)
@@ -899,11 +906,11 @@ public class EmailTemplates {
                 .replace("{reviewTime}", reviewTime);
 
         // 服务器查询地址
-        String URL = appUrl + "/#/player-servers/" + gameId;
+        String URL = appUrl + "/player-servers/" + gameId;
         template = template.replace("{url}", URL);
         if (custom) {
             if (infoList.size() <= 1) {
-                final Map<String, Object> infoMap = infoList.get(0);
+                final Map<String, Object> infoMap = infoList.getFirst();
                 template = template.replace("{name}", (String) infoMap.get("name"))
                         .replace("{serverAddress}", (String) infoMap.get("serverAddress"))
                         .replace("{port}", String.valueOf(infoMap.get("port")))
@@ -913,20 +920,21 @@ public class EmailTemplates {
         } else {
             // 定义单个服务器信息的HTML模板
             String serverInfoTemplate =
-                    "<div class=\"server-info-block\" style=\"margin-bottom: 20px; padding: 15px; background: #f8f9fa; border-radius: 8px; border: 1px solid #e9ecef;\">\n" +
-                            "    <div class=\"info-item\">\n" +
-                            "        <span class=\"info-label\">服务器名称：</span>\n" +
-                            "        <span class=\"info-value\">{name}</span>\n" +
-                            "    </div>\n" +
-                            "    <div class=\"info-item\">\n" +
-                            "        <span class=\"info-label\">服务器地址：</span>\n" +
-                            "        <span class=\"info-value\">{serverAddress}:{port}</span>\n" +
-                            "    </div>\n" +
-                            "    <div class=\"info-item\">\n" +
-                            "        <span class=\"info-label\">游戏版本：</span>\n" +
-                            "        <span class=\"info-value\">{core}-{version}</span>\n" +
-                            "    </div>\n" +
-                            "</div>";
+                    """
+                            <div class="server-info-block" style="margin-bottom: 20px; padding: 15px; background: #f8f9fa; border-radius: 8px; border: 1px solid #e9ecef;">
+                                <div class="info-item">
+                                    <span class="info-label">服务器名称：</span>
+                                    <span class="info-value">{name}</span>
+                                </div>
+                                <div class="info-item">
+                                    <span class="info-label">服务器地址：</span>
+                                    <span class="info-value">{serverAddress}:{port}</span>
+                                </div>
+                                <div class="info-item">
+                                    <span class="info-label">游戏版本：</span>
+                                    <span class="info-value">{core}-{version}</span>
+                                </div>
+                            </div>""";
 
             // 处理服务器信息
             if (infoList == null || infoList.isEmpty()) {
@@ -971,40 +979,39 @@ public class EmailTemplates {
         // 根据不同状态获取自定义模板
         if (!EmailTempCache.isEmpty() && EmailTempCache.get(key) != null) {
             final CustomEmailTemplates defaultTemp = EmailTempCache.get(key);
-            switch (titte) {
-                case BAN_TITLE:
+            template = switch (titte) {
+                case BAN_TITLE -> {
                     template = defaultTemp.getBanTemp() != null ? defaultTemp.getBanTemp() : WHITELIST_NOTIFICATION_TEMPLATE;
-                    template = template.replace(
+                    yield template.replace(
                             "<!-- 封禁模板 -->",
                             "<div class=\"status rejected\"><span>🚫 你已被封禁！🚫</span></div>"
                     ).replace(
                             "<!-- 移除模板 -->",
                             ""
                     );
-
-                    break;
-                case REMOVE_TITLE:
+                }
+                case REMOVE_TITLE -> {
                     template = defaultTemp.getRemoveTemp() != null ? defaultTemp.getRemoveTemp() : WHITELIST_NOTIFICATION_TEMPLATE;
-                    template = template.replace(
+                    yield template.replace(
                             "<!-- 移除模板 -->",
                             "<div class=\"status rejected\"><span>😢 很抱歉，您的白名单申请未通过</span></div>"
                     ).replace(
                             "<!-- 封禁模板 -->",
                             ""
                     );
-
-                    break;
-                case FAIL_TITLE:
+                }
+                case FAIL_TITLE -> {
                     template = defaultTemp.getRefuseTemp() != null ? defaultTemp.getRefuseTemp() : WHITELIST_NOTIFICATION_TEMPLATE;
-                    template = template.replace(
+                    yield template.replace(
                             "<!-- 移除模板 -->",
                             "<div class=\"status rejected\"><span>😢 很抱歉，您的白名单申请未通过</span></div>"
                     ).replace(
                             "<!-- 封禁模板 -->",
                             ""
                     );
-                    break;
-            }
+                }
+                default -> template;
+            };
         }
 
         if (StringUtils.isEmpty(removeReason)) {
